# sport-log

./: .gitignore  .rustfmt.toml  .typos.toml  Cargo.toml  README.md  SYNCHRONIZATION.md  diesel.toml  flutter_check.sh  model.drawio  patch.sh  rust_checks.sh
.github/: CODEOWNERS  dependabot.yml  dependabot.yml.deactivated
migrations/: epoch_manual_migrations.sql
sport-log-action-provider-boxbase-login/: Cargo.toml  sport-log-action-provider-boxbase-login.toml.template
sport-log-action-provider-boxbase-login/src/: main.rs
sport-log-action-provider-boxplanner-login/: Cargo.toml  sport-log-action-provider-boxplanner-login.toml.template
sport-log-action-provider-boxplanner-login/src/: main.rs
sport-log-action-provider-map-matcher/: Cargo.toml  README.md  config.toml
sport-log-action-provider-map-matcher/src/: main.rs
sport-log-action-provider-map-matching/: Cargo.toml  config.toml
sport-log-action-provider-sportstracker/: Cargo.toml  config.toml  sport-log-action-provider-sportstracker.toml.template
sport-log-action-provider-sportstracker/src/: config.rs  main.rs  schedule.rs
sport-log-action-provider-wodify-login/: Cargo.toml  action-provider-wodify-login.py  sport-log-action-provider-wodify-login.toml  sport-log-action-provider-wodify-login.toml.template
sport-log-action-provider-wodify-login/src/: main.rs
sport-log-action-provider-wodify-wod/: Cargo.toml  action-provider-wodify-wod.py  sport-log-action-provider-wodify-wod.toml  sport-log-action-provider-wodify-wod.toml.template
sport-log-action-provider-wodify-wod/src/: main.rs
sport-log-ap-utils/: Cargo.toml
sport-log-ap-utils/src/: lib.rs
sport-log-api-tester/: Cargo.toml
sport-log-api-tester/src/: main.rs
sport-log-client/: .env.template  .gitignore  .metadata  README.md  SCREENSHOTS.md  analysis_options.yaml  flutter_check.sh  org.sport-log.sport-log-client.desktop  org.sport-log.sport-log-client.yml  pubspec.yaml  screenshots.sh  sport-log-client.yaml  sport-log-client.yaml.template
sport-log-derive/: Cargo.toml
sport-log-password-hasher/: Cargo.toml
sport-log-scheduler/: Cargo.toml  sport-log-scheduler.toml  sport-log-scheduler.toml.template
sport-log-scheduler/src/: config.rs  main.rs
sport-log-server/: Cargo.toml  README.md  config.toml  diesel.toml  sport-log-server-config.toml.template  sport-log-server.service  sport-log-server.toml.template
sport-log-server-derive/: Cargo.toml
sport-log-server/migrations/2021-06-27-141656_platform/: up.sql
sport-log-server/migrations/2021-06-30-075732_action/: up.sql
sport-log-server/migrations/2021-07-11-162453_diary&wod/: down.sql  up.sql
sport-log-server/migrations/2021-07-11-163657_movement/: down.sql  up.sql
sport-log-server/migrations/2021-07-11-165208_strength/: up.sql
sport-log-server/migrations/2021-07-11-165537_metcon/: down.sql  up.sql
sport-log-server/migrations/2021-07-11-173119_cardio/: up.sql
sport-log-server/src/: auth.rs  build.rs  config.rs  error.rs  macros.rs  main.rs  router.rs  schema.patch  schema.rs  state.rs  tests.rs
sport-log-server/src/db/: account.rs  action.rs  admin.rs  cardio.rs  diary_wod.rs  metcon.rs  mod.rs  movement.rs  platform.rs  sharing.rs  strength.rs  training_plan.rs  user.rs
sport-log-server/src/handler/: account.rs  action.rs  activity.rs  app.rs  cardio.rs  diary_wod.rs  garbage_collection.rs  metcon.rs  mod.rs  movement.rs  platform.rs  strength.rs  training_plan.rs  user.rs
sport-log-server/src/model/: action.rs  cardio.rs  diary_wod.rs  metcon.rs  mod.rs  movement.rs  platform.rs  sharing.rs  strength.rs  user.rs
sport-log-server/src/repository/: action.rs  diary_wod.rs  mod.rs  platform.rs  user.rs
sport-log-server/src/types/: action.rs  auth.rs  cardio.rs  db.rs  mod.rs  movement.rs  platform.rs  user.rs
sport-log-server/src/verification/: action.rs  diary_wod.rs  mod.rs  platform.rs  user.rs
sport-log-types/: Cargo.toml  diesel.toml
sport-log-types-derive/: Cargo.toml
sport-log-types/migrations/2021-06-27-081822_functions/: down.sql  up.sql
sport-log-types/migrations/2021-06-27-085316_user/: down.sql  up.sql
sport-log-types/migrations/2021-06-27-141656_platform/: down.sql  up.sql
sport-log-types/migrations/2021-06-30-075732_action/: down.sql  up.sql
sport-log-types/migrations/2021-07-11-162453_diary&wod/: down.sql  up.sql
sport-log-types/migrations/2021-07-11-163657_movement/: down.sql  up.sql
sport-log-types/migrations/2021-07-11-164054_training_plan/: down.sql  up.sql
sport-log-types/migrations/2021-07-11-165208_strength/: down.sql  up.sql
sport-log-types/migrations/2021-07-11-165537_metcon/: down.sql  up.sql
sport-log-types/migrations/2021-07-11-173119_cardio/: down.sql  up.sql
sport-log-types/migrations/2021-07-13-151521_sharing/: down.sql  up.sql
sport-log-types/migrations/2021-09-17-192654_trainingsplan/: down.sql  up.sql
sport-log-types/src/: action.rs  lib.rs  macros.rs  platform.rs  schema.patch  schema.rs  user.rs
sport-log-types/src/repository/: account.rs  action.rs  activity.rs  admin.rs  cardio.rs  diary_wod.rs  metcon.rs  mod.rs  movement.rs  platform.rs  strength.rs  user.rs
sport-log-types/src/types/: account.rs  action.rs  activity.rs  admin.rs  auth.rs  cardio.rs  config.rs  db.rs  diary_wod.rs  epoch.rs  error.rs  metcon.rs  mod.rs  movement.rs  platform.rs  sharing.rs  state.rs  strength.rs  training_plan.rs  uri.rs  user.rs  version.rs
sport_log_action_provider_wodify/: action_provider_wodify.py
sport_log_server/: Cargo.toml  patch.sh
sport_log_server/migrations/2021-06-27-085316_user/: down.sql
sport_log_server/migrations/2021-06-27-141656_platform/: down.sql  up.sql
sport_log_server/migrations/2021-06-30-075732_action/: up.sql
sport_log_server/src/: auth.rs  main.rs  schema.rs
sport_log_server/src/handler/: account.rs  action.rs  mod.rs  platform.rs
sport_log_server/src/model/: account.rs  action.rs  mod.rs  platform.rs  user.rs
sport_log_server/src/repository/: account.rs  action.rs  mod.rs  platform.rs
sport_log_server_derive/: Cargo.toml
src/: main.rs  model.rs  schema.patch  (+1 more)
(+797 files in other folders)
