[package]
name = "sport-log-action-provider-boxplanner-login"
version = "0.1.0"
edition = "2024"

[dependencies]
sport-log-types = { path = "../sport-log-types" }
sport-log-ap-utils = { path = "../sport-log-ap-utils" }

tokio = { version = "1.9", features = ["full"] }
thirtyfour = "0.35.0"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.138", features = ["derive"] }
toml = "0.8"
thiserror = "2.0.4"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.33.0"
clap = { version = "4.4.11", features = ["derive"] }

[lints]
workspace = true
