[package]
name = "sport-log-action-provider-map-matcher"
version = "0.1.0"
edition = "2018"


[dependencies]
sport-log-types = { path = "../sport-log-types" }
sport-log-ap-utils = { path = "../sport-log-ap-utils" }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.8"
rand = "0.8.4"
gpx = "0.8.3"
geo-types = "0.7.2"
geoutils = "0.4.1"
err-derive = "0.3.0"
lazy_static = "1.4.0"
