[package]
name = "sport-log-action-provider-map-matcher"
version = "0.1.0"
edition = "2021"

[dependencies]
sport-log-types = { path = "../sport-log-types" }
sport-log-ap-utils = { path = "../sport-log-ap-utils" }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rand = "0.8"
gpx = "0.8"
geo-types = "0.7"
geoutils = "0.4"
err-derive = "0.3"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
