[package]
name = "sport-log-action-provider-wodify-login"
version = "0.1.0"
edition = "2021"

[dependencies]
sport-log-types = { path = "../sport-log-types" }
sport-log-ap-utils = { path = "../sport-log-ap-utils" }

tokio = { version = "1.9", features = ["full"] }
thirtyfour = "0.32.0-rc.4"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.138", features = ["derive"] }
toml = "0.8"
thiserror = "1"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30"
clap = { version = "4.4.11", features = ["derive"] }

[lints]
workspace = true
