[package]
name = "sport-log-ap-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
sport-log-types = { path = "../sport-log-types" }

reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
tracing = "0.1"

[lints]
workspace = true
