[package]
name = "sport-log-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
sport-log-types = { path = "../sport-log-types" }

reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
