[package]
name = "sport-log-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
sport-log-types = { path = "../sport-log-types" }

reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
