[package]
name = "sport-log-server"
version = "0.1.0"
edition = "2021"
default-run = "sport-log-server"

[dependencies]
sport-log-types = { path = "../sport-log-types", features = ["db"] }
sport-log-derive = { path = "../sport-log-derive" }

async-trait = "0.1.73"
tokio = { version = "1.9", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["async-read-body", "typed-header"] }
hyper = "1.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = [
    "trace",
    "sensitive-headers",
    "compression-gzip",
    "decompression-gzip",
] }
diesel = { version = "2.2.0" }
diesel-async = { git = "https://github.com/weiznich/diesel_async", features = [
    "postgres",
    "deadpool",
    "async-connection-wrapper",
] }
diesel_migrations = "2.1.0"
argon2 = { version = "0.5" }
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
derive-deftly = "0.14.0"

[dev-dependencies]
mime = "0.3"
base64 = "0.22"
flate2 = "1.0.25"
lazy_static = "1.4.0"
rand = "0.8"
serde_json = "1.0"

[lints]
workspace = true
