[package]
name = "sport-log-server"
version = "0.1.0"
edition = "2024"
default-run = "sport-log-server"

[dependencies]
sport-log-types = { path = "../sport-log-types", features = ["db"] }
sport-log-derive = { path = "../sport-log-derive" }

async-trait = "0.1.73"
tokio = { version = "1.9", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = [
    "async-read-body",
    "typed-header",
] }
hyper = "1.0"
tower = { version = "0.5.0", features = ["util"] }
tower-http = { version = "0.6.2", features = [
    "trace",
    "sensitive-headers",
    "compression-gzip",
    "decompression-gzip",
] }
diesel = { version = "2.3.2" }
diesel-async = { version = "0.7.3", features = [
    "postgres",
    "deadpool",
    "async-connection-wrapper",
] }
diesel_migrations = "2.1.0"
argon2 = "0.6.0-rc.0"
rand = { version = "0.9.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
derive-deftly = "1.0.1"

[dev-dependencies]
mime = "0.3"
base64 = "0.22"
flate2 = "1.0.25"
serde_json = "1.0"

[lints]
workspace = true
