[package]
name = "sport-log-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
const_format = "0.2.30"
http = "1.0"
diesel = { version = "2.3.2", features = [
    "postgres",
    "r2d2",
    "chrono",
], optional = true }
diesel-derive-enum = { version = "2", features = ["postgres"], optional = true }
derive-deftly = "1.0.1"

[features]
db = ["diesel", "diesel-derive-enum"]

[lints]
workspace = true
