[package]
name = "sport-log-server"
version = "0.1.0"
edition = "2018"

default-run = "sport-log-server"

[dependencies]

sport_log_server_derive = { path = "../sport_log_server_derive" }

#rocket = "0.5.0-rc.1"
rocket = "0.4.10"
rocket_contrib = { version = "*", default-features = false, features = ["json", "diesel_postgres_pool"] }
#rocket_codegen = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
serde = { version = "1.0.116", features = ["derive"]}
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
base64 = "0.13.0"